# dvop

./: ARCHITECTURE.md  Cargo.toml  FEATURES.md  LICENSE.txt  README.md  TESTING_STRATEGY.md  TEST_COVERAGE_IMPROVEMENTS.md  build.rs  com.example.Dvop.desktop  install.sh  run_all_tests.sh  run_e2e_tests.sh  test.js  test_ui_errors.ui  uninstall.sh
completion_data/: README.md  bash.json  css.json  go.json  html.json  javascript.json  python.json  rust.json  sql.json  svelte.json  typescript.json
resources/: git_diff_panel.ui  resources.gresource.xml  search_panel.ui  settings_dialog.ui  window.ui
src/: audio.rs  file_cache.rs  handlers.rs  lib.rs  main.rs  search.rs  settings.rs  status_log.rs  syntax.rs  ui.rs  utils.rs  video.rs  window_bounds.rs
src/completion/: json_provider.rs  mod.rs  ui.rs
src/debugger/: breakpoints.rs  cargo.rs  mod.rs  rust_project.rs  ui.rs
src/extensions/: code_completion.rs  hooks.rs  manager.rs  manifest.rs  mod.rs  native.rs  runner.rs  rust_completion.rs  rust_diagnostics.rs  sample.rs  ui.rs
src/linter/: diagnostics_panel.rs  gtk_ui_linter.rs  mod.rs  rust_linter.rs  ui.rs
src/lsp/: client.rs  mod.rs  rust_analyzer.rs
src/ui/: activity_bar.rs  css.rs  file_manager.rs  git_diff.rs  git_diff_panel_template.rs  global_search.rs  mod.rs  search_panel_template.rs  settings.rs  settings_dialog_template.rs  terminal.rs
tests/: E2E_TESTING.md  README.md  e2e_tests.rs  quick_tests.rs
tests/e2e/: e2e_tests.rs
tests/unit/: audio_tests.rs  file_cache_tests.rs  handlers_tests.rs  search_tests.rs  settings_tests.rs  status_log_tests.rs  syntax_tests.rs  utils_tests.rs  video_tests.rs
tests/unit/completion/: json_provider_tests.rs  mod_tests.rs  ui_tests.rs
tests/unit/extensions/: code_completion_tests.rs  hooks_tests.rs  manager_tests.rs  mod_tests.rs  native_tests.rs  runner_tests.rs  rust_completion_tests.rs  rust_diagnostics_tests.rs  sample_tests.rs  ui_tests.rs
tests/unit/linter/: gtk_ui_linter_tests.rs  mod_tests.rs
tests/unit/lsp/: client_tests.rs  mod_tests.rs  rust_analyzer_tests.rs
tests/unit/ui/: css_tests.rs  file_manager_tests.rs  git_diff_tests.rs  global_search_tests.rs  window_bounds_tests.rs
