[package]
name = "dvop"
version = "0.1.0"
edition = "2021"

# Library target for testing
[lib]
name = "dvop"
path = "src/lib.rs"

# Binary target
[[bin]]
name = "dvop"
path = "src/main.rs"

[dependencies]
gtk4 = "0.10"
glib = "0.21"
gdk4 = "0.10"
vte4 = "0.9"
home = "0.5"
mime_guess = "2.0"
gdk-pixbuf = "0.21"
sourceview5 = "0.10"  # For syntax highlighting and completion
once_cell = "1.21"  # For thread-safe lazy initialization
regex = "1.12"  # For advanced text pattern matching in completion
serde = { version = "1.0", features = ["derive"] }  # For JSON serialization/deserialization
serde_json = "1.0"  # For JSON parsing
lazy_static = "1.5"  # For global static variables
tempfile = "3.27"  # For file operations and testing
chrono = "0.4"  # For proper date/time formatting
gstreamer = "0.24"  # For audio playback
gstreamer-app = "0.24"  # For audio data extraction
rustfft = "6.4"  # For FFT analysis
hound = "3.5"  # For reading audio files
apodize = "1.0"  # For windowing functions
pulldown-cmark = "0.13"  # For markdown parsing and rendering
webkit6 = "0.5"  # For HTML rendering in markdown preview (GTK4 compatible)

lsp-types = "0.97"  # LSP protocol types
serde_repr = "0.1"  # Serde support for repr enums
tokio = { version = "1.50", features = ["full"] }  # Async runtime for LSP
async-channel = "2.4"  # Async channels for LSP communication
url = "2.5"  # URL parsing (used by lsp-types)
quick-xml = "0.38"  # XML parsing for GTK UI file validation

[dev-dependencies]
# Testing dependencies
serial_test = "3.4"  # For running tests serially (needed for GTK)

[build-dependencies]
glib-build-tools = "0.21"